# TaskFlow

./: .gitignore  Dockerfile  README.md  System_ALL.excalidraw  docker-compose.yml  pom.xml
Client/: index.html
Client/src/: App.tsx
Client/taskflow-front/: Dockerfile  package-lock.json  package.json  tailwind.config.js
Client/taskflow-front/public/: index.html
Client/taskflow-front/src/: index.css  index.tsx
Client/taskflow-front/src/api/: deadline.ts  deadlinecounter.ts
Client/taskflow-front/src/components/Filters/: CustomerFilter.tsx  Filters.tsx  NameFilter.tsx  PriorityFilter.tsx  TeamFilter.tsx
Client/taskflow-front/src/components/Header/: Header.tsx
Client/taskflow-front/src/components/Layout/: Layout.tsx
Client/taskflow-front/src/components/MiniTask/: MiniTask.tsx
Client/taskflow-front/src/components/ProjectPreview/: ProjectPreview.tsx
Client/taskflow-front/src/components/SearchForm/: SearchForm.tsx
Client/taskflow-front/src/routes/: employee.tsx  project.tsx  projects.tsx  staff.tsx  stuff.tsx  tasks.tsx
Client/taskflow-front/src/store/: pagesStore.ts
Client/taskflow-front/src/types/: entities.ts  filtersTypes.ts  pages.ts  projectsFiltersTypes.ts  tasks.ts
Server/: .gitignore
Server/Java/: Dockerfile  pom.xml
Server/Notification/Notifications/: CMakeLists.txt  taskflow.db
Server/Notification/Notifications/headers/: Time.h
Server/Notifications/: main.cpp
Server/Notifications/headers/: DataBase.h  Message.h
frontend/: package-lock.json
src/main/resources/: application.properties
(+38 files in other folders)
